Frontend veiculo finalizado

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -30,8 +30,12 @@
                 <input id="apartamento" type="text" placeholder="Digite o número de seu apartamento..." required>
             </div>
             <div class="form-div">
-                <label for="">Contato:</label>
-                <input id="contato" type="text" placeholder="Digite seu número de contato..." required>
+                <label for="">Telefone:</label>
+                <input id="telefone" type="text" placeholder="Digite seu número de telefone..." required>
+            </div>
+            <div class="form-div">
+                <label for="">E-mail:</label>
+                <input id="e-mail" type="email" placeholder="Digite seu e-mail..." required>
             </div>
             <div class="form-div">
                 <label for="">Status:</label>
