--- a/frontend/pages/listagem.html
+++ b/frontend/pages/listagem.html
@@ -12,10 +12,10 @@
         <table>
             <thead>
                 <tr>
-                    <th scope="col">nome</th>
-                    <th scope="col">bloco</th>
-                    <th scope="col">apartamento</th>
-                    <th scope="col">contato</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Bloco</th>
+                    <th scope="col">Apartamento</th>
+                    <th scope="col">Contato</th>
                 </tr>
             </thead>
             <tbody>
