Cadastro de usuario finalizado

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -35,14 +35,14 @@
             </div>
             <div class="form-div">
                 <label for="">E-mail:</label>
-                <input id="e-mail" type="email" placeholder="Digite seu e-mail..." required>
+                <input id="email" type="email" placeholder="Digite seu e-mail..." required>
             </div>
             <div class="form-div">
                 <label for="">Status:</label>
-                <select required name="" id="">
-                    <option value="">Residente</option>
-                    <option value="">Proprietário</option>
-                    <option value="">Visitante</option>
+                <select required name="status" id="status">
+                    <option value="residente">Residente</option>
+                    <option value="proprietario">Proprietário</option>
+                    <option value="visitante">Visitante</option>
                 </select>
             </div>
             <div class="button-div">
