Finalizado( ao que tudo indica )

--- a/frontend/pages/cadCarro.html
+++ b/frontend/pages/cadCarro.html
@@ -39,6 +39,6 @@
         </form>
     </main>
 
-    <script src="/frontend/script/index.js"></script>
+    <script src="/frontend/script/carro.js"></script>
 </body>
 </html>
