--- a/frontend/pages/listagem.html
+++ b/frontend/pages/listagem.html
@@ -28,7 +28,7 @@
                     <th scope="col">Acoes</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="morador-tbody">
             </tbody>
         </table>
 
@@ -46,7 +46,7 @@
                     <th>Ações</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="veiculo-tbody">
             </tbody>
         </table>
     </main>
