--- a/frontend/pages/listagem.html
+++ b/frontend/pages/listagem.html
@@ -28,7 +28,7 @@
                     <th scope="col">Acoes</th>
                 </tr>
             </thead>
-            <tbody class="morador-tbody">
+            <tbody class="veiculo-tbody">
             </tbody>
         </table>
 
@@ -46,10 +46,10 @@
                     <th>Ações</th>
                 </tr>
             </thead>
-            <tbody class="veiculo-tbody">
+            <tbody class="morador-tbody">
             </tbody>
         </table>
     </main>
-    <script src="/frontend/script/index.js"></script>
+    <script src="/frontend/script/listagem.js"></script>
 </body>
 </html>
