Erro no edit de veiculos

--- a/frontend/pages/listagem.html
+++ b/frontend/pages/listagem.html
@@ -17,7 +17,6 @@
     
     <main class="main-listagem">
         <h1>Listagem de veículo</h1>
-        <a class="link-car-register" href="cadCarro.html">Cadastrar novo veículo</a>
         <table>
             <thead>
                 <tr>
@@ -25,6 +24,7 @@
                     <th scope="col">Modelo</th>
                     <th scope="col">Cor</th>
                     <th scope="col">Vaga</th>
+                    <th scope="col">Dono</th>
                     <th scope="col">Acoes</th>
                 </tr>
             </thead>
